--- a/package.json
+++ b/package.json
@@ -137,7 +137,7 @@
     "express": "^4.17.1",
     "file-loader": "^6.0.0",
     "git-describe": "^4.0.4",
-    "http-server": "^0.12.3",
+    "http-server": "=0.12.3",
     "ignore-assets-webpack-plugin": "^2.0.1",
     "inspectpack": "=4.5.2",
     "jest": "=25.5.4",
@@ -150,9 +150,9 @@
     "mini-css-extract-plugin": "^0.11.0",
     "mocha": "=7.2.0",
     "nightwatch": "^1.3.6",
-    "node-sass": "^4.14.1",
+    "node-sass": "=4.14.1",
     "npm-audit-ci-wrapper": "^3.0.0",
-    "npm-run-all": "^4.1.5",
+    "npm-run-all": "=4.1.5",
     "oauth2-server": "^2.4.1",
     "open": "^7.0.4",
     "postcss-loader": "^3.0.0",
@@ -169,7 +169,7 @@
     "tachyons-sass": "^4.9.5",
     "terser-webpack-plugin": "^4.0.0",
     "url-loader": "^2.3.0",
-    "webpack": "^4.43.0",
+    "webpack": "=4.44.2",
     "webpack-bundle-size-analyzer": "^3.1.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
